# Programming-in-Python

./: README.md
exceptions/: pyproject.toml
exceptions/python_files/: read_file1.py  read_file2.py
exceptions/python_files/data/: bioinformatic1.csv  bioinformatic2.csv
introduction/: pyproject.toml
introduction/tests/: examplePoetry.py  test_colorama.py  test_emoji.py  test_pendulum.py  test_server.py
modules/project1/: epidemic_main.py  pyproject.toml
modules/project1/tests/: epidemic_tests.py
modules/project1/utils/: epidemic_utils.py
modules/project2/python_files/: read_file.py  write_file.py
modules/project2/python_files/data/: offer.txt
urllib3/: pyproject.toml
urllib3/tests/: test.py
